Fixed ordering and spacing of by text

--- a/.storybook/themes/news.scss
+++ b/.storybook/themes/news.scss
@@ -879,6 +879,9 @@
 						),
 					),
 				),
+				card-list-by-text: (
+					margin-inline-end: var(--global-spacing-1),
+				),
 				card-list-byline-container: (
 					display: flex,
 					align-items: flex-end,
